# telescope_case

./: README.md
django-property-backend/: .gitignore  README.md  manage.py  pyproject.toml
django-property-backend/django_property_backend/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
django-property-backend/django_property_backend/property_app/: asgi.py  settings.py  urls.py  wsgi.py
django-property-backend/properties/: admin.py  models.py  serializers.py  views.py
property-frontend/: README.md  components.json  package-lock.json  package.json
property-frontend/app/: root.tsx
property-frontend/app/components/icons/: map.tsx
property-frontend/app/routes/: _index.tsx
property-frontend/app/routes/_index/: route.tsx
property-frontend/app/routes/portfolio.$id/: propertyList.tsx  propertyMap.client.tsx  route.tsx
property-frontend/app/routes/portfolio.$portfolioId.create-property/: route.tsx
property-frontend/app/routes/portfolio.$portfolioId.property.$id/: route.tsx
property-frontend/app/routes/property.$id/: route.tsx
property-frontend/app/routes/user.$id/: route.tsx
property-frontend/app/routes/user.$userId.portfolio.$id/: propertyList.tsx  propertyMap.client.tsx  route.tsx
property-frontend/app/routes/user.$userId.portfolio.$portfolioId.create-property/: kartverketApi.ts  mapSelector.client.tsx  route.tsx
property-frontend/app/routes/user.$userId.portfolio.$portfolioId.property.$id/: route.tsx
property-frontend/app/types/: portfolio.ts  property.ts
property-frontend/app/utils/: api.ts
